--- a/application/db/data/nno/global_property.yml
+++ b/application/db/data/nno/global_property.yml
@@ -920,3 +920,15 @@ global_property_00099:
   id: 99
   property_value: "false"
   description: Indicates whether or not the 'health center' attribute is shown when viewing/searching for patients
+global_property_00226: 
+  property: IVR_ACCESS_CODE_COUNTER 
+  uuid: 1d54b348-bd85-11df-9b35-00248c09418a
+  id: 226
+  property_value: "0"
+  description: keeps track of the ivr access code.
+global_property_00227: 
+  property: CALL_ID_COUNTER  
+  uuid: 1d54b348-bd85-11df-9b35-00248c09418a
+  id: 227
+  property_value: "0"
+  description: keeps track of the call id counter.
