specified restclient version

--- a/application/Gemfile
+++ b/application/Gemfile
@@ -7,7 +7,7 @@ gem 'will_paginate', '2.3.16'
 gem 'json', '1.5.0'
 gem 'settingslogic'
 gem 'fastercsv','1.5.4'
-gem 'rest-client'
+gem 'rest-client','1.6.7'
 gem 'nokogiri', '1.5.0'
 gem 'mechanize', '2.7.0' 
 gem 'mysql2'
