--- a/application/config/report.yml
+++ b/application/config/report.yml
@@ -1,3 +1,4 @@
 config:
   export_path: /home/precious/src/ruby/database_scripts/mnch
   export_type: "test"
+  anc_connect_file: /var/www/mnch-hotline/application/script/anc-connect-clients.json
