--- a/application/Gemfile
+++ b/application/Gemfile
@@ -14,5 +14,5 @@ gem 'mysql2'
 gem 'mysql'
 gem 'activerecord-mysql2-adapter','0.0.3'
 gem 'paginate'
-gem 'passenger'
+gem 'passenger', '4.0.41'
 gem 'rb-readline'
